# SlayFit

./: .gitignore  QUICKSTART.md  README.md  build_apk.bat  docker-compose.yml  privacy-policy.md  setup.bat  setup.sh
.claude/: settings.json  settings.local.json
backend/: .env.example  .gitignore  API.md  Dockerfile  main.py  pyproject.toml
backend/app/api/: activities.py  auth.py  coach.py  diary.py  food.py  users.py  weight.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: calculator.py  user_service.py
mobile/: .gitignore  BUILD_APK.md  README.md  build_apk.bat  pubspec.yaml
mobile/android/: AndroidManifest.xml
mobile/android/app/: build.gradle.kts  google-services.json
mobile/lib/: main.dart
mobile/lib/config/: api_config.dart
mobile/lib/data/: challenge_definitions.dart  guided_classes.dart  workout_library.dart
mobile/lib/models/: health_model.dart  user_model.dart
mobile/lib/providers/: activity_provider.dart  auth_provider.dart  challenges_provider.dart  daily_history_provider.dart  food_provider.dart  health_provider.dart  meal_plan_provider.dart  measurements_provider.dart  notification_feed_provider.dart  recipe_provider.dart  records_provider.dart  streak_provider.dart  user_provider.dart  water_provider.dart  weight_provider.dart  workout_provider.dart
mobile/lib/screens/: activity_screen.dart  ai_coach_screen.dart  (+11 more)
mobile/test/: widget_test.dart
pad_icon/: pubspec.yaml
pad_icon/.dart_tool/: package_config.json  package_graph.json
(+20 files in other folders)
