[project]
name = "slayfit-backend"
version = "0.1.0"
description = "SlayFit - Intelligent Weight Loss & Fitness App"
requires-python = ">=3.11"
authors = [{name = "SlayFit Team"}]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "python-multipart==0.0.6",
    "databases==0.8.0",
    "alembic==1.12.1",
    "pillow==10.1.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.1",
    "celery==5.3.4",
    "redis==5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "ruff==0.1.8",
    "mypy==1.7.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
